--- a/AlgoZone.Storage.Businesslayer/AlgoZone.Storage.Businesslayer.csproj
+++ b/AlgoZone.Storage.Businesslayer/AlgoZone.Storage.Businesslayer.csproj
@@ -2,12 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AlgoZone.Storage.Datalayer.RabbitMQ\AlgoZone.Storage.Datalayer.RabbitMQ.csproj" />
       <ProjectReference Include="..\AlgoZone.Storage.Datalayer.TimescaleDB\AlgoZone.Storage.Datalayer.TimescaleDB.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AlgoZone.Core" Version="0.0.3" />
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
     </ItemGroup>
 
 </Project>
