--- a/AlgoZone.Storage.Datalayer.TimescaleDB/AlgoZone.Storage.Datalayer.TimescaleDB.csproj
+++ b/AlgoZone.Storage.Datalayer.TimescaleDB/AlgoZone.Storage.Datalayer.TimescaleDB.csproj
@@ -2,13 +2,21 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="AlgoZone.Storage.Datalayer.TimescaleDB.csproj.DotSettings" />
     </ItemGroup>
 
 </Project>
