--- a/AlgoZone.Storage/AlgoZone.Storage.csproj
+++ b/AlgoZone.Storage/AlgoZone.Storage.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>disable</ImplicitUsings>
         <UserSecretsId>b28d36ae-6a60-4b76-b135-0d3d8bc6a003</UserSecretsId>
     </PropertyGroup>
 
@@ -13,8 +14,18 @@
 
     <ItemGroup>
       <PackageReference Include="LightInject" Version="6.4.1" />
+      <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.3.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
