--- a/AlgoZone.Storage/AlgoZone.Storage.csproj
+++ b/AlgoZone.Storage/AlgoZone.Storage.csproj
@@ -26,6 +26,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+      <PackageReference Include="Topshelf" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
