Add Docker support

--- a/AlgoZone.Storage/AlgoZone.Storage.csproj
+++ b/AlgoZone.Storage/AlgoZone.Storage.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <UserSecretsId>b28d36ae-6a60-4b76-b135-0d3d8bc6a003</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
