--- a/.github/workflows/ghcr-publish.yml
+++ b/.github/workflows/ghcr-publish.yml
@@ -70,5 +70,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
-            "github_username=${{ secrets.GHCR_USERNAME}"
-            "github_token=${{ secrets.GHCR_TOKEN}"
+            "github_username=${{ secrets.GHCR_USERNAME}}"
+            "github_token=${{ secrets.GHCR_TOKEN}}"
