--- a/.github/workflows/ghcr-publish.yml
+++ b/.github/workflows/ghcr-publish.yml
@@ -69,6 +69,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          secrets: |
-            "github_username=${{ secrets.GHCR_USERNAME}}"
-            "github_token=${{ secrets.GHCR_TOKEN}}"
+          build-args: |
+            "GH_USERNAME=${{ secrets.GHCR_USERNAME}}"
+            "GH_TOKEN=${{ secrets.GHCR_TOKEN}}"
